add redux and some Login pages

--- a/src/page/style/LoginOrSignup.css
+++ b/src/page/style/LoginOrSignup.css
@@ -104,6 +104,7 @@
   font-weight: 500;
   line-height: normal;
   letter-spacing: 0.06px;
+  cursor: pointer;
 }
 .AgreeLogin {
   width: 100%;
@@ -147,6 +148,7 @@
   border-radius: 8px;
   background: #103f74;
   margin: 25px 0;
+  cursor: pointer;
 }
 .or {
   color: #2b2b36;
@@ -170,6 +172,7 @@
   color: #000000;
   background-color: #fff;
   color: #000;
+  cursor: pointer;
 
   font-family: Poppins;
   font-size: 12px;
@@ -205,6 +208,7 @@
   font-weight: 700;
   line-height: normal;
   letter-spacing: 0.06px;
+  cursor: pointer;
 }
 
 .photo-right {
