--- a/src/page/style/Dashbaord.css
+++ b/src/page/style/Dashbaord.css
@@ -10,14 +10,17 @@
 }
 .first-Container {
   display: flex;
+  display: flex;
+  width: 100%;
+  height: 500px;
 }
 /* Chart style  */
 .left {
   width: 50%;
 }
 .Charts {
-  width: 78%;
-  height: 74%;
+  /* width: 78%;
+  height: 74%; */
 
   margin-left: 50px;
   border-radius: 8px;
@@ -106,7 +109,7 @@
   background: #56ccf2;
   position: relative;
 }
-.theBigst::before {
+.theBigst::after {
   content: "50%";
   text-align: center;
   font-size: 15px;
@@ -120,18 +123,18 @@
   position: absolute;
 }
 
-.theBigst::after {
+.theBigst::before {
   content: "";
   border-style: solid;
   border-width: 8px;
-  border-color: black transparent transparent transparent;
+  border-color: #192252 transparent transparent transparent;
   position: absolute;
   top: -9px;
   right: 18px;
 }
 /* calendar Style */
 .calendar {
-  width: 413px;
+  width: 50%;
   height: 449px;
   flex-shrink: 0;
   border-radius: 8.39px;
@@ -267,4 +270,78 @@ time,
   font-weight: 500;
   line-height: 20px; /* 166.667% */
   letter-spacing: 0.06px;
+}
+
+@media only screen and (max-width: 768px) {
+  .first-Container {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+  }
+  .Charts {
+    display: block;
+    width: 100%;
+    height: 60vh;
+    position: relative;
+  }
+  .y {
+    display: flex;
+
+    height: 100%;
+    position: relative;
+  }
+  .contianer-Charts {
+    width: 100vw;
+  }
+  .column {
+    border-radius: 8px 8px 0px 0px;
+    background: #dfe8f6;
+    border-radius: 8px 8px 0px 0px;
+    background: #dfe8f6;
+    width: 100%;
+    height: 50px;
+  }
+  .columns {
+    width: 15px;
+    height: 230px;
+    bottom: -20;
+    border-radius: 8px 8px 0px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+  }
+  .first-Container {
+    display: flex;
+    flex-direction: column;
+  }
+  .theBigst {
+    background: #56ccf2;
+    position: relative;
+  }
+  .theBigst::before {
+    content: "";
+
+    border-style: solid;
+    border-width: 8px;
+    border-color: #192252 transparent transparent transparent;
+    position: absolute;
+    top: -13px;
+    right: -1px;
+  }
+  .left {
+    width: 100%;
+  }
+  .theBigst::after {
+    content: "50%";
+    text-align: center;
+    font-size: 13px;
+    color: #dfe8f6;
+    width: 33px;
+    height: 19px;
+    border-radius: 5px;
+    background-color: #192252;
+    top: -28px;
+    left: -9px;
+    position: absolute;
+  }
 }
