--- a/src/page/style/Dashbaord.css
+++ b/src/page/style/Dashbaord.css
@@ -280,9 +280,15 @@ time,
   }
   .Charts {
     display: block;
-    width: 100%;
+    width: 72vw;
+    height: 60vh;
     height: 60vh;
     position: relative;
+    margin: 10px;
+    border-radius: 8px;
+    border: 1px solid #dfe8f6;
+    /* padding: 10px 40px; */
+    background: #fff;
   }
   .y {
     display: flex;
@@ -291,7 +297,7 @@ time,
     position: relative;
   }
   .contianer-Charts {
-    width: 100vw;
+    width: 75vw;
   }
   .column {
     border-radius: 8px 8px 0px 0px;
