fix all responsive

--- a/src/page/style/Profile.css
+++ b/src/page/style/Profile.css
@@ -164,7 +164,7 @@
     border-radius: 50%;
     border: 8px solid #fff;
   }
-  .background {
+  .background img {
     width: 327px;
     height: 134px;
   }
