--- a/src/page/style/Profile.css
+++ b/src/page/style/Profile.css
@@ -165,7 +165,7 @@
     border: 8px solid #fff;
   }
   .background img {
-    width: 327px;
+    width: 100%;
     height: 134px;
   }
   .box-info {
