--- a/src/page/style/HeaderAndMenu.css
+++ b/src/page/style/HeaderAndMenu.css
@@ -73,11 +73,15 @@
   padding-top: 20px;
   width: 20%;
   border-right: 1px solid #dfe8f6;
-  transition: 1s;
+
+  transition: 100ms;
+  opacity: 0;
   transform: translateX(-150%);
 }
 .menu-close {
   transform: translateX(0%);
+  transition: 1s;
+  opacity: 1;
 }
 .menu-Item {
   display: flex;
