--- a/src/page/style/HeaderAndMenu.css
+++ b/src/page/style/HeaderAndMenu.css
@@ -75,12 +75,13 @@
   border-right: 1px solid #dfe8f6;
 
   transition: 100ms;
-
+  opacity: 0;
   transform: translateX(-150%);
 }
 .menu-close {
   transform: translateX(0%);
   transition: 1s;
+  opacity: 1;
 }
 .menu-Item {
   display: flex;
@@ -217,7 +218,7 @@
     height: 100vh;
     left: -100%;
     transform: translateX(0%);
-
+    opacity: 1;
     transition: 1s;
   }
 
