--- a/src/page/style/Appointment.css
+++ b/src/page/style/Appointment.css
@@ -79,10 +79,8 @@
   align-items: center;
   flex-shrink: 0;
 }
-.Appointmentmore img {
-}
 
-. .TableOfAppointment {
+.TableOfAppointment {
   padding: 20px 10px;
 }
 
