--- a/src/page/style/Dashbaord.css
+++ b/src/page/style/Dashbaord.css
@@ -741,6 +741,7 @@ time,
     justify-content: space-between;
     align-items: center;
     padding: 10px 0;
+    cursor: pointer;
   }
   .img-container {
     display: flex;
